
Project: Jargon - IRODS Java API
Date: 02/18/2010
Release Version: 2.3.X - this is the post-release version of Jargon 2.3.0 and will hold bug fixes for the 2.3.0 release.   New Jargon 2.3.1 features are
being developed on the 2.3.1 branch.  Fixes in the trunk are being pushed into the 2.3.1 branch.

================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against IRODS 2.1, IRODS2.2, and IRODS2.3

libraries
---------

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

-----------
*fix for  Bug 77 -  Jargon NullPointerException when invoking setResource

-----------
*fix for  Bug 82 -  error querying resources in resource group

-----------
*fix for  Bug 87 -  resource status and other new resource fields in resource metadata for query lookup

-----------
*fix for  Bug 84 -  connection/finalizer issues with Jargon
================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org